<resources>
    <string name="app_name">LogMiles</string>

    <string name="navigation_drawer_open">Otwórz panel nawigacyjny</string>
    <string name="navigation_drawer_close">Zamknij panel nawigacyjny</string>

    <string name="action_settings">Ustawienia</string>
    <string name="title_activity_maps">Mapa</string>

    <string name="attention">Uwaga!</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="next">Dalej</string>

    <string name="menu_option_open_map">Otwórz mapę</string>
    <string name="menu_option_create_route">Utwórz nową trasę</string>
    <string name="menu_option_open_route">Pokaż aktualną trasę na mapie</string>
    <string name="menu_option_open_routes_list">Otwórz listę dotychczasowych tras</string>
    <string name="menu_option_save_route">Nagrywaj trasę</string>
    <string name="menu_option_generate_report">Generuj raport</string>
    <string name="menu_option_historical">Dotychczasowe raporty</string>
    <string name="menu_option_basic">Podróż</string>
    <string name="menu_option_routes">Trasy</string>
    <string name="menu_option_share">Udostępnij</string>
    <string name="menu_option_send">Wyślij</string>
    <string name="menu_option_tools">Narzędzia</string>
    <string name="menu_option_slideshow">Pokaz slajdów</string>
    <string name="menu_option_play_location">Nagrywaj trasę</string>
    <string name="menu_option_planned_routes">Planowane trasy</string>
    <string name="menu_option_actual_routes">Zrealizowane trasy</string>


    <string name="default_info_title">Domyślna lokalizacja</string>
    <string name="default_info_snippet">Nie znaleziono miejsca,
        ponieważ nie zezwolono na pobieranie aktualnej lokalizacji.</string>
    <string name="option_get_place">Znajdź miejsce</string>
    <string name="pick_place">Wybierz miejsce</string>

    <string name="choose_language">Wybierz język</string>
    <string name="pl_language">Polski</string>
    <string name="eng_language">Angielski</string>

    <string name="map_new_point_created">Nowy punkt został dodany do aktualnej trasy.</string>
    <string name="map_setting_traffic">Pokazać aktualne warunki drogowe?</string>
    <string name="map_setting_context_traffic_on">Tak</string>
    <string name="map_setting_context_traffic_off">Nie</string>
    <string name="map_setting_add_type_of_transport">Dodaj środek transportu</string>
    <string name="map_setting_add">Dodaj</string>

    <string name="fragment_location_listener_start">Rozpocznij nagrywanie</string>
    <string name="fragment_location_listener_stop">Zakończ nagrywanie</string>

    <string name="fragment_add_route_point_textview1">Dodaj punkt do trasy!</string>

    <string name="dialog_map_marker_click_choose_option">Co chcesz zrobić z tą trasą?</string>
    <string name="dialog_map_marker_click_add_to_route">Dodaj do aktualnej trasy</string>
    <string name="dialog_map_marker_click_create_new_route">Utwórz nową trasę z tym punktem</string>
    <string name="dialog_map_marker_click_delete_marker">Usuń znacznik</string>
    <string name="dialog_map_marker_click_anuluj">Anuluj</string>

    <string name="dialog_add_new_planned_route_title_headline">Wprowadź tytuł nowej trasy:</string>
    <string name="dialog_add_new_planned_route_title_title">Tytuł</string>
    <string name="dialog_add_new_planned_route_title_ok">OK</string>

    <string name="dialog_adding_route_confirm_question">Czy na pewno dodać ten punkt do porównania?</string>

    <string name="dialog_planned_route_card_click_generate_report">Wygeneruj raport z podróży służbowej</string>
    <string name="dialog_planned_route_card_click_generate_acctual_report">Wygeneruj raport trasy zrealizowanej</string>
    <string name="dialog_planned_route_card_click_generate_planned_report">Wygeneruj raport trasy zaplanowanej</string>
    <string name="dialog_planned_route_card_click_show_route_on_map">Pokaż trasę na mapie</string>
    <string name="dialog_planned_route_card_click_show_all_points">Pokaż wszystkie punkty</string>
    <string name="dialog_planned_route_card_click_delete_route">Usuń trasę</string>

    <string name="cardview_id">Trasa</string>
    <string name="cardview_title">Tytuł:</string>
    <string name="cardview_date">Data:</string>
    <string name="cardview_date_start">Data rozpoczęcia:</string>
    <string name="cardview_date_end">Data zakończenia:</string>
    <string name="cardview_distance">Dystans:</string>
    <string name="cardview_duartion">Czas trwania:</string>
    <string name="cardview_points">Liczba punktów:</string>
    <string name="cardview_endDate">Data zakończenia: %1$ta, %1$te %1$tB %1$tY</string>
    <string name="cardview_startDate">Data rozpoczęcia: %1$ta, %1$te %1$tB %1$tY</string>



    <string name="fragment_transport_selection">Wybierz rodzaj transportu:</string>
    <string name="fragment_transport_selection_car">Samochód</string>
    <string name="fragment_transport_selection_bus">Bus</string>
    <string name="fragment_transport_selection_tir">Tir</string>
    <string name="fragment_transport_selection_plane">Samolot</string>
    <string name="fragment_transport_selection_ship">Statek</string>
    <string name="fragment_transport_selection_railway">Pociąg</string>

    <string name="frag_time_of_travel_time">Czas trwania podróży</string>
    <string name="frag_time_of_travel_number_hour">Liczba godzin postojowych:</string>
    <string name="frag_time_of_travel_number_hour_ex">np. 0.5 h</string>
    <string name="frag_time_of_travel_days">Liczba dni (jeśli wyjazd trwał dłużej niż 1 dzień):</string>
    <string name="frag_time_of_travel_days_ex">np. 2 dni</string>
    <string name="generate_report_chooser_application_send">Wyślij raport przez</string>

    <string name="report_head">POLECENIE WYJAZDU SŁUŻBOWEGO NR</string>
    <string name="report_transport_type">Środek transportu:      </string>
    <string name="report_name">Imię i nazwisko pracownika:      </string>
    <string name="report_occupation">Stanowisko służbowe:       </string>
    <string name="report_purpose">Cel podróży:      </string>
    <string name="report_combustion">Spalanie:</string>
    <string name="report_combustion_cost">Koszt spalania:</string>
    <string name="report_feeding">Wyżywienie</string>
    <string name="report_feedingA1">a) brak bezpłatnego wyżywienia - czas spędzony w podróży służbowej</string>
    <string name="report_feedingB1">b) zapewnione częściowe bezpłatne wyżywienie</string>
    <string name="report_feedingC1">c) zapewnione całodzienne bezpłatne wyżywienie</string>
    <string name="report_feeding2">Pełna doba (oraz niepełna doba ponad 12 godzin)</string>
    <string name="report_feeding3">Liczba dób:</string>
    <string name="report_feeding4">Niepełna doba od 8 godzin do 12 godzin</string>
    <string name="report_feeding5">Niepełna doba do 8 godzin</string>
    <string name="report_feeding31">Bezpłatne śniadania</string>
    <string name="report_feeding32">Bezpłatne obiady</string>
    <string name="report_feeding33">Bezpłatne kolacje</string>
    <string name="report_accomodation1">Koszty noclegu</string>
    <string name="report_accomodation2">Według rachunku bankowego</string>
    <string name="report_accomodation3">Ryczałt za nocleg:</string>
    <string name="report_accomodation4">Liczba noclegów:</string>
    <string name="report_accomodation5">Limit na nocleg:</string>
    <string name="report_transport_costs1">Koszty dojazdu i przejazdu</string>
    <string name="report_transport_costs2">Koszty dojazdów i przejazdów:</string>
    <string name="report_transport_costs3">z dworca i do dworca kolejowgo</string>
    <string name="report_transport_costs4">z dworca i do dworca autobusowego</string>
    <string name="report_transport_costs5">portu lotniczego</string>
    <string name="report_transport_costs6">portu morskiego</string>
    <string name="report_transport_costs7">Koszty przejazdu środkami komunikacji miejskiej</string>
    <string name="report_transport_costs8">Wydatki na autostradę</string>
    <string name="report_transport_costs9">Pozostałe koszty</string>
    <string name="report_hospitalization1">Pracownik przebywał w szpitalu lub innym zakładzie leczniczym</string>
    <string name="report_hospitalization2">Liczba dób:</string>
    <string name="report_anotherCosts">Inne udokumentowane wydatki</string>
    <string name="report_sum">Ogółem</string>
    <string name="report_sum2">Słownie</string>
    <string name="report_planned_title">Raport planowanej trasy</string>
    <string name="report_planned_title2">Trasa zaplanowana</string>
    <string name="report_planned_route_title">Tytuł:</string>
    <string name="report_planned_route_points">Liczba punktów:</string>
    <string name="report_planned_route_date">Data zaplanowania:</string>
    <string name="report_planned_route_type">Rodzaj transportu:</string>
    <string name="report_planned_route">Przebieg trasy:</string>
    <string name="report_planned_table1">Nr punktu</string>
    <string name="report_planned_table2">Nazwa</string>
    <string name="report_planned_table3">Punkt początkowy</string>
    <string name="report_planned_table4">Punkt końcowy</string>
    <string name="report_planned_table5">Czas</string>
    <string name="report_planned_table6">Odległość</string>
    <string name="report_planned_table7">Potwierdzenie</string>
    <string name="report_planned_table_sum">Razem:</string>

    <string name="report_acctual_route_title">Trasa zrealizowana</string>
    <string name="report_acctual_route_start">Data rozpoczęcia:</string>
    <string name="report_acctual_route_end">Data zakończenia:</string>
    <string name="report_acctual_route_distance">Dystans: </string>
    <string name="report_acctual_route_distance2">km</string>
    <string name="report_acctual_route_map">Trasa na mapie:</string>
    <string name="report_acctual_legend">[czarny - trasa zrealizowana, czerwony - trasa zaplanowana]</string>
    <string name="notification_titile">LogMiles</string>
    <string name="notification_text">Monitoruję Twoje aktualne położenie!</string>
    <string name="menu">Menu</string>
    <string name="menu_option_option">Ustawienia</string>

</resources>
