<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/menu_option_basic">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/menu_option_open_map" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_person_pin_black_24dp"
            android:title="@string/menu_option_play_location" />

    </item>

    <item android:title="@string/menu_option_routes">
        <menu>
            <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_my_location_black_24dp"
                android:title="@string/menu_option_actual_routes" />
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_edit_location_black_24dp"
                android:title="@string/menu_option_planned_routes" />
            <item
                android:id="@+id/nav_history"
                android:icon="@drawable/ic_view_list_black_24dp"
                android:title="@string/menu_option_historical" />
        </menu>
    </item>

    <item android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:title="@string/action_settings"
                android:icon="@drawable/ic_menu_manage" />
        </menu>
    </item>

</menu>
