<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="1dp"
        android:gravity="center"
        android:text="@string/dialog_map_marker_click_choose_option"
        android:textSize="22sp"
        android:textColor="@color/colorPrimaryDark"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/buttonGenerateReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_planned_route_card_click_generate_report"
            android:textColor="@color/colorPrimaryDark"
            android:theme="@style/ButtonStyle" />

        <Button
            android:id="@+id/buttonGeneratePlannedRouteReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_planned_route_card_click_generate_planned_report"
            android:textColor="@color/colorPrimaryDark"
            android:theme="@style/ButtonStyle" />

        <Button
            android:id="@+id/buttonShowRouteOnMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_planned_route_card_click_show_route_on_map"
            android:textColor="@color/colorPrimaryDark"
            android:theme="@style/ButtonStyle" />

        <Button
            android:id="@+id/buttonShowAllPoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_planned_route_card_click_show_all_points"
            android:textColor="@color/colorPrimaryDark"
            android:theme="@style/ButtonStyle" />

        <Button
            android:id="@+id/buttonDeleteRoute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_planned_route_card_click_delete_route"
            android:textColor="@color/colorPrimaryDark"
            android:theme="@style/ButtonStyle" />

        <Button
            android:id="@+id/buttonAnuluj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_map_marker_click_anuluj"
            android:textColor="@color/colorPrimaryDark"
            android:theme="@style/ButtonStyle" />

    </RadioGroup>
</LinearLayout>
</layout>