<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="1dp"
        android:gravity="center"
        android:text="@string/dialog_map_marker_click_choose_option"
        android:textSize="22sp"
        android:textColor="@color/colorPrimaryDark"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/buttonAddToRoute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_map_marker_click_add_to_route"
            android:textColor="@color/colorPrimaryDark"
            android:theme="@style/ButtonStyle" />

        <Button
            android:id="@+id/buttonCreateNewRoute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_map_marker_click_create_new_route"
            android:textColor="@color/colorPrimaryDark"
            android:theme="@style/ButtonStyle" />

        <Button
            android:id="@+id/buttonDeleteMarker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_map_marker_click_delete_marker"
            android:textColor="@color/colorPrimaryDark"
            android:theme="@style/ButtonStyle" />

        <Button
            android:id="@+id/buttonAnuluj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_map_marker_click_anuluj"
            android:textColor="@color/colorPrimaryDark"
            android:theme="@style/ButtonStyle" />

    </RadioGroup>
</LinearLayout>
</layout>