<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/attention"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textViewQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/dialog_adding_route_confirm_question"
            android:textSize="18sp" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/no"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:theme="@style/ButtonStyle"
                app:layout_constraintRight_toLeftOf="@+id/buttonYes"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/yes"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:theme="@style/ButtonStyle"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>
</layout>