<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="1dp"
        android:gravity="center"
        android:text="@string/choose_language"
        android:textSize="22sp"
        android:textColor="@color/colorPrimaryDark"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:gravity="center">

        <RadioButton
            android:id="@+id/pl_language_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="5dp"
            android:text="@string/pl_language"
            android:textSize="18sp"
            android:buttonTint="@color/colorAccent"/>

        <RadioButton
            android:id="@+id/eng_language_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="5dp"
            android:text="@string/eng_language"
            android:textSize="18sp"
            android:buttonTint="@color/colorAccent"/>

    </RadioGroup>

</LinearLayout>
</layout>